--- a/index.html
+++ b/index.html
@@ -2,46 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Results summary component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <title>Results summary component</title>
+  <link rel="stylesheet" href="style.css">
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    
   </style>
 </head>
 <body>
-
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main>
+      <section id="card">
+        <section id="background">
+          <div id="yresult">Your Result</div>
+          <div id="highlight">
+            <p id="76">76
+              <div id="100"><p> of 100</p></div>
+            </p>
+          </div>
+          <h1>Great</h1>
+          <p>You scored higher than 65% of the people who have taken these tests.</p>
+        </section>
+        <section id="summary">
+          <h1>Summary</h1>
+          <div class="results" id="reaction">
+            <div class="category">Reaction</div>
+            <div class="number">80 / 100</div>
+          </div>
+          <div class="results" id="memory">
+            <div class="category">Memory</div>
+            <div class="number">92 / 100</div>
+          </div>
+          <div class="results" id="verbal">
+            <div class="category">Verbal</div>
+            <div class="number">61 / 100</div>
+          </div>
+          <div class="results" id="visual">
+            <div class="category">Visual</div>
+            <div class="number">72 / 100</div>
+          </div>
+          <div id="button">Continue</div>
+        </section>
+      </section>   
+  </main>
 </body>
 </html>
