--- a/index.html
+++ b/index.html
@@ -2,48 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <title>Results summary component</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    
-  </style>
+  <title>Frontend Mentor | Results summary component</title>
 </head>
 <body>
   <main>
       <section id="card">
         <section id="background">
-          <div id="yresult">Your Result</div>
-          <div id="highlight">
-            <p id="76">76
-              <div id="100"><p> of 100</p></div>
-            </p>
+          <p id="top">Your Result</p>
+          <div id="circle">
+            <p style="font-size: 2.5em; font-weight: bolder;">76</p>
+            <p style="color:rgba(255, 255, 255, 0.42)">of 100</p>
           </div>
           <h1>Great</h1>
-          <p>You scored higher than 65% of the people who have taken these tests.</p>
+          <p id="bottom">You scored higher than 65% of the people who have taken these tests.</p>
         </section>
         <section id="summary">
           <h1>Summary</h1>
-          <div class="results" id="reaction">
-            <div class="category">Reaction</div>
-            <div class="number">80 / 100</div>
+          <div class="category" id="reaction">
+            <div class="type" id="type-reaction"><strong>Reaction</strong></div>
+            <div class="score"><strong>80</strong> /100</div>
           </div>
-          <div class="results" id="memory">
-            <div class="category">Memory</div>
-            <div class="number">92 / 100</div>
+          <div class="category" id="memory">
+            <div class="type" id="type-memory"><strong>Memory</strong></div>
+            <div class="score"><strong>92</strong> /100</div>
           </div>
-          <div class="results" id="verbal">
-            <div class="category">Verbal</div>
-            <div class="number">61 / 100</div>
+          <div class="category" id="verbal">
+            <div class="type" id="type-verbal"><strong>Verbal</strong></div>
+            <div class="score"><strong>61</strong> /100</div>
           </div>
-          <div class="results" id="visual">
-            <div class="category">Visual</div>
-            <div class="number">72 / 100</div>
+          <div class="category" id="visual">
+            <div class="type" id="type-visual"><strong>Visual</strong></div>
+            <div class="score"><strong>72</strong> /100</div>
           </div>
           <div id="button">Continue</div>
         </section>
-      </section>   
+      </section>
   </main>
 </body>
 </html>
