just finished the project

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
   <title>Frontend Mentor | Results summary component</title>
 </head>
 <body>
@@ -22,19 +23,31 @@
         <section id="summary">
           <h1>Summary</h1>
           <div class="category" id="reaction">
-            <div class="type" id="type-reaction"><strong>Reaction</strong></div>
+            <div class="element" id="element-reaction">
+              <span class="material-symbols-outlined">bolt</span>
+              <div class="type" id="type-reaction"><strong>Reaction</strong></div>
+            </div>
             <div class="score"><strong>80</strong> /100</div>
           </div>
           <div class="category" id="memory">
-            <div class="type" id="type-memory"><strong>Memory</strong></div>
+            <div class="element" id="element-memory">
+              <span class="material-symbols-outlined">neurology</span>
+              <div class="type" id="type-memory"><strong>Memory</strong></div>
+            </div>
             <div class="score"><strong>92</strong> /100</div>
           </div>
           <div class="category" id="verbal">
-            <div class="type" id="type-verbal"><strong>Verbal</strong></div>
+            <div class="element" id="element-verbal">
+              <span class="material-symbols-outlined">sms</span>
+              <div class="type" id="type-verbal"><strong>Verbal</strong></div>
+            </div>
             <div class="score"><strong>61</strong> /100</div>
           </div>
           <div class="category" id="visual">
-            <div class="type" id="type-visual"><strong>Visual</strong></div>
+            <div class="element" id="element-visual">
+              <span class="material-symbols-outlined">visibility</span>
+              <div class="type" id="type-visual"><strong>Visual</strong></div>
+            </div>
             <div class="score"><strong>72</strong> /100</div>
           </div>
           <div id="button">Continue</div>
